refactor: add winning logic and extract constants class
- Implement the calculation logic to evaluate and detect winning combinations.
- Refactor the codebase by moving hardcoded values into a centralized constants class.
- Clean up existing code to improve overall readability and maintainability.